--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Go Go Go Go</h1>
     <p>Go with tata and ben</p>
-    <a href="/index.html">HOME</a> | <a href="/about.html">HOME</a>
+    <a href="/index.html">HOME</a> | <a href="/about.html">ABOUT</a>
 </body>
 </html>
