--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>About</title>
 </head>
 <body>
-    tataman 21 y/o
+    <h1>tataman 21 y/o</h1>
     <a href="/index.html">HOME</a> | <a href="/about.html">HOME</a>
 </body>
 </html>
